--- a/css/1style.css
+++ b/css/1style.css
@@ -212,30 +212,35 @@ p{
 }
 
 
+
+/* 以下footer消さないでええええええええええええええええええ3／27 */
 footer{
   display:flex !important;
-  position:fixed;
-   bottom:0;
-   left:0;
-   width: 100%; 
-   height: 50px;
-   padding: 5px;
-   /* background: white; */
+  /* position:fixed; */
+   /* bottom:0;
+   left:0; */
+   /* width: 100%;  */
+   /* height: 50px; */
+   /* padding: 5px; */
    background: transparent;
+   font-size: 20px;
    z-index: 2;
  }
+
 .nav2{
   padding: 10px;
-  margin-left:auto;
+  margin-bottom: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .menu-item2 {
-  list-style: none;
+  /* list-style: none; */
   background: transparent;
   display: inline;
-  width: 100%;
+  /* width: 100%; */
   /* background: blue; */
 }
-
+/* 以上footer消さないでええええええええええええええええええ3／27 */
 
 
 /*-----  SP  ---- */
