--- a/css/3style.css
+++ b/css/3style.css
@@ -119,8 +119,7 @@ font-style: normal; */
   font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
   font-weight: 600;
   font-style: normal;
-
- /* margin-top:0px; */
+ /* margin-top:100px; */
  margin-right:auto;
  margin-left:auto; 
  width: 60%;  
@@ -131,6 +130,7 @@ font-style: normal; */
   /* box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .3); */
   padding-top: 10px;
   padding-bottom: 10px;
+  margin: 50px;
 }
 /* .text3{
   display: inline;
@@ -166,13 +166,14 @@ font-style: normal; */
 .photo{
   margin-top: 0;
   /* width: 800px; */
-  width:90%;
-  margin-left:5%; 
-  margin-right: 5%; 
+  width:60%;
+  margin-left:20%; 
+  margin-right: 20%; 
   /* filter: grayscale(100%); */
   transition-duration: 1s;
   /* opacity: 0.1; */
   /* margin-top: 40%; */
+ 
 }
 .photolast{
   margin-left: 40%;
@@ -245,6 +246,17 @@ font-style: normal; */
   .navbar{
     margin-bottom: 0!important;
   }
+  .photo{
+    margin-top: 0;
+    /* width: 800px; */
+    width:90%;
+    margin-left:5%; 
+    margin-right: 5%; 
+    /* filter: grayscale(100%); */
+    transition-duration: 1s;
+    /* opacity: 0.1; */
+    /* margin-top: 40%; */
+  }
   /* 先ほどここ追加した。 */
 
   .insta{
@@ -257,22 +269,23 @@ font-style: normal; */
    width: 80%;  
   }
   .text2{
-    width: 60%;
-    margin-left: 20%;
-    margin-left: 20%;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+
+   width: 80%;  
   }
+  .text2{
+
+    width: 80%;  
+   }
+   
 
   .yt_logo {
-    width: 30%;
-    height: 30%;
+    width: 15%;
+    height: 15%;
   }
   
   .ig_logo {
-    width: 15%;
-    height: 15%;
+    width: 5%;
+    height: 5%;
   }
 
 
