--- a/css/2style.css
+++ b/css/2style.css
@@ -75,7 +75,7 @@ header{
   /* text-align: center; */
   /* background:transparent;   */
   min-width: 100px;
- 
+  text-decoration: none;
 }
 
 .menu-item {
