--- a/css/4style.css
+++ b/css/4style.css
@@ -105,8 +105,8 @@ header{
   font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
   font-weight: 600;
   font-style: normal;
-  margin-top:100px;
- margin-bottom: 100px;
+  margin-top:10%;
+ margin-bottom: 10%;
  margin-right:auto;
  margin-left:auto; 
  text-decoration: none;
@@ -118,10 +118,6 @@ header{
 h2.text1{
   text-align: center;
 }
-
-
-
-
 
 .background{
   margin-top: 0;
@@ -183,18 +179,25 @@ h2.text1{
 }
 
 .photolast{
-  margin-left: 35%;
-  margin-right: 35%;
-  margin-top: 10%;
+  margin-left: 40%;
+  margin-right: 40%;
+  margin-top: 100px;
   margin-bottom:10% ;
-  width: 30%;s
+  width: 20%;
 }
 .photolast2{
-  margin-left: 35%;
-  margin-right: 35%;
+  margin-left: 40%;
+  margin-right: 40%;
   margin-top: 10%;
   margin-bottom:10% ;
-  width: 30%;
+  width: 20%;
+}
+.photolast3{
+  margin-left: 70%;
+  margin-right: 10%;
+  /* margin-top: 10%; */
+  /* margin-bottom:10% ; */
+  width: 20%;
 }
 
 /* .photo:hover{
@@ -280,10 +283,27 @@ h2.text1{
    .youtube{
     display:none;
    }
+
    .text1{
    width: 80%;  
+   margin-bottom: 100px;
+   margin-top: 100px;
   }
 
+  .photolast{
+    margin-left: 35%;
+    margin-right: 35%;
+    margin-top: 50px;
+    margin-bottom:10% ;
+    width: 30%;
+  }
+  .photolast2{
+    margin-left: 35%;
+    margin-right: 35%;
+    margin-top: 50px;
+    margin-bottom:10% ;
+    width: 30%;
+  }
 
 
  }
