--- a/css/2style.css
+++ b/css/2style.css
@@ -244,7 +244,7 @@ header{
     font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
     font-weight: 600,300;
     font-style: normal;
-    margin-top: 10%;
+    margin-top: 100px;
     margin-bottom: 0;
     margin-right:auto;
     margin-left:auto; 
