--- a/css/2style.css
+++ b/css/2style.css
@@ -122,6 +122,7 @@ header{
   /* background: rebeccapurple; */
   width: 60%;  
   text-align: center;
+  border: 2px solid black;
 }
 .text2{
   font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
@@ -256,6 +257,7 @@ header{
     /* background: rebeccapurple; */
     width: 80%;  
     text-align: center;
+   
   }
   .text2{
     font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
