--- a/css/4style.css
+++ b/css/4style.css
@@ -38,8 +38,7 @@ header{
   /* background-color: white; */
   background-color:  white;
   opacity: 0.8;
-  /* opacity: 0.8;
-  filter: blur(); */
+ 
 }
  
  
@@ -113,9 +112,26 @@ header{
  /* background: rebeccapurple; */
  width: 60%;  
 }
-h2.text1{
-  text-align: center;
+
+.text2{
+  font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  /* margin-top:10%; */
+ margin-bottom: 10%;
+
+ margin-right:auto;
+ margin-left:auto; 
+ text-decoration: none;
+ color: black;
+ /* height: 60%; */
+ /* background: rebeccapurple; */
+ width: 60%;  
+ text-align: right;
 }
+/* h2.text1{
+  text-align: center;
+} */
 
 .background{
   margin-top: 0;
