--- a/css/1style.css
+++ b/css/1style.css
@@ -55,8 +55,8 @@ header{
   /* border-radius: 0,0,30px,30px; */
   /* 左上 | 右上 | 右下 | 左下 */
 
-  border-bottom-right-radius: 30px;
-  border-bottom-left-radius:  30px;
+  /* border-bottom-right-radius: 30px; */
+  /* border-bottom-left-radius:  30px; */
 
 
 
