画像の諸々の修正とホバー時の下線の削除

--- a/css/2style.css
+++ b/css/2style.css
@@ -60,6 +60,10 @@ header{
   /* background:rgb(237, 59, 10,10); */
 }
 
+a:hover {
+  text-decoration: none!important;
+}
+
 .cap5 {
   /* top:0; */
   font-size: 30px;
