--- a/css/1style.css
+++ b/css/1style.css
@@ -40,7 +40,11 @@ background-color: black;
  cursor:-moz-grab;
  cursor:-webkit-grab;
  cursor: grab;
-} 
+}
+
+a:hover {
+  text-decoration: none!important;
+}
 
 header{
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
