--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,9 @@ header{
    /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25); */
  }
  
+ a:hover {
+  text-decoration: none!important;
+}
 
 /* video.main{
   width: 100%;
@@ -120,9 +123,6 @@ img.logo{
   /* filter: invert(); */
 }
 
-.cap5:hover {
-  text-decoration: none;
-}
 
 .menu-item {
   list-style: none;
