--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ header{
 video.main{
   position: absolute;
   width: 100%;
-
+background: black;
   /* width: 100vh; */
   /* height: 100vh; */
   /* background: url(./sapmle.png) no-repeat center center/cover; */
@@ -117,7 +117,8 @@ img.logo{
   margin-bottom: 0;
   /* text-align: center; */
   background:transparent;  
-  color: rgb(55, 121, 180);
+  /* color: rgb(55, 121, 180); */
+  /* color:white; */
   text-decoration: none;
   min-width: 100px;
   /* filter: invert(); */
@@ -130,6 +131,22 @@ img.logo{
   margin-right: 20px;
   display: inline;
 }
+
+/* a:link {
+  color: #FFF!important;
+ } */
+/* li:before {
+  content: "• ";
+  color: white;
+}
+li{
+
+  color: white;
+}
+
+a:active{
+  color: white;
+} */
 
 .items{
   min-width: 300px;
@@ -306,7 +323,7 @@ footer{
   height: 100%;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
   background-size: auto;
-  transform: rotate(90deg );
+  /* transform: rotate(90deg ); */
   margin-left: 0%;
   margin-right: 0%;
   margin-top: 0%;
