--- a/css/1style.css
+++ b/css/1style.css
@@ -45,6 +45,9 @@ background-color: black;
 a:hover {
   text-decoration: none!important;
 }
+a:active{
+  color:rebeccapurple;
+} 
 
 header{
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
