あまりよくなかったからやめた

--- a/css/2style.css
+++ b/css/2style.css
@@ -126,7 +126,7 @@ a:hover {
   /* background: rebeccapurple; */
   width: 60%;  
   text-align: center;
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 .text2{
   font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
