--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
   /* background-image:url(../photos/10.jpeg); */
   background-size:cover;
-  
+
  
   /* background-image: url(./photos/mb2.png);
   background-position: center center;  */
@@ -54,6 +54,7 @@ header{
    height: 50px;
    padding: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+    background:black;
    /* background: transparent; */
    z-index: 2;
 
@@ -91,11 +92,14 @@ video.main{
   /* background-size: cover; */
   margin-left: auto;
   margin-right: auto;
+         
+
 }
 video {
   min-width: 100%;
   min-height: 100%;
   z-index: 1;
+  background:black;
 }
 
 img.logo{
@@ -104,7 +108,7 @@ img.logo{
   top: 30%;
   margin-right:40%;
   margin-left:40%;
-  filter: invert();
+  /* filter: invert(); */
 }
 
 .cap5 {
@@ -158,7 +162,7 @@ li{
  height: 30px;
  width: 50px;
  min-width: 50px;
- /* filter: invert(); */
+ filter: invert();
 }
 .youtube{
  margin-top: 5px;
@@ -167,7 +171,7 @@ li{
  height: 30px;
  width: 40px;
  min-width: 30px;
- /* filter: invert(); */
+ filter: invert();
 }
 .tate{
   /* position: absolute; */
